[tool.poetry]
name = "rubix-bacnet"
version = "1.7.4"
description = "Rubix BACnet"
authors = ["NubeIO"]

[tool.poetry.dependencies]
python = "^3.6"
bacpypes = "^0.18.3"
gunicorn = "^20.0.4"
toml = "^0.10.2"
rubix-http = { git = "https://github.com/NubeIO/rubix-http", rev = "v1.1.1" }
rubix-registry = {git = "https://github.com/NubeIO/rubix-registry", rev = "v1.1.1"}
rubix-mqtt = { git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.2.0" }
Flask-Migrate = "^2.6.0"
Flask-Script = "^2.0.6"
shortuuid = "^1.0.1"
gevent = "^21.1.2"
Flask = "1.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
